--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 	<version>1</version>
 	<packaging>pom</packaging>
 
-	<name>multi-module</name>
-	<description>Quick way to build / test all of the other projects.</description>
+	<name>poc-multi-module</name>
+	<description>poc-multi-module</description>
 
     <modules>
         <module>gateway</module>
